Lint: new Integer()/new URL(String) -> Integer.valueOf()/URI.create().toURL(); delete dead chart example files